# evolvable-user-memory

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROVENANCE.md  README.md  ROADMAP.md  SECURITY.md  compose.memory.yaml  compose.production.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: api-guide.md  architecture.md  authorization.md  data-lifecycle.md  deployment.md  development.md  evaluation.md  evolution-safety.md  frontend-guide.md  getting-started.md  governance.md  index.md  integration-contract.md  memory-compression.md  milvus-projection.md  privacy-lifecycle.md  project-handbook.md  threat-model.md  troubleshooting.md
docs/adr/: 0001-layer-and-plane-boundaries.md
docs/assets/: evolvable-memory-technical-architecture.prompt.txt
examples/: first_memory.py
src/evolvable_memory/: __init__.py  composition.py  config.py  frontend.py  main.py  migrate.py  projector.py
src/evolvable_memory/adapters/: authorization.py  embeddings.py  gate_receipts.py  in_memory.py  in_memory_governance.py  milvus.py  postgres.py  postgres_governance.py  projection_outbox.py  system.py
src/evolvable_memory/api/: __init__.py  app.py  contract.py  middleware.py  schemas.py  security.py
src/evolvable_memory/api/static/: app.js  index.html  site.webmanifest  styles.css
src/evolvable_memory/application/: access.py  commands.py  compression.py  evaluation.py  evolution.py  gate_receipts.py  governance.py  ports.py  projection.py  projection_types.py  security.py  service.py
src/evolvable_memory/bootstrap/: __init__.py  api.py
src/evolvable_memory/domain/: __init__.py  common.py  evidence.py  evolution.py  experience.py  governance.py  memory.py  projection.py
src/evolvable_memory/evaluation/: __init__.py  cli.py  loader.py
src/evolvable_memory/evaluation/data/: smoke-v1.json  temporal-v1.json
src/evolvable_memory/migrations/: __init__.py  env.py
src/evolvable_memory/migrations/versions/: 0001_authoritative_memory.py  0002_scope_integrity.py  0003_bitemporal_recall.py  0004_active_strategy_registry.py  0005_evolution_experiments.py  0006_milvus_projection_queue.py  0007_privacy_governance.py  0008_memory_usage_receipts.py  0009_usage_projection.py  __init__.py
tests/: conftest.py  fault_proxy.py  test_api.py  test_architecture.py  test_authorization.py  test_composition_root.py  test_compression.py  test_compression_api.py  test_config.py  test_evaluation.py  test_evaluation_cli.py  test_evolution.py  test_evolution_application.py  test_frontend.py  test_frontend_brand_assets.py  test_frontend_e2e.py  test_gate_receipts.py  test_governance.py  test_memory_application.py  test_postgres_integration.py  test_postgres_test_safety.py  test_projection.py
